feat: add pdf download to home page resume

--- a/index.html
+++ b/index.html
@@ -1,4 +1,27 @@
 ---
 layout: resume
 title: Home
+description: >
+  Hi, I'm Mickaël KENAN, web developer.
+hide_description: true
+sidebar: false
+order: 1
+left_column:
+ - work
+ - education
+#  - projects
+#  - publications
+#  - references
+right_column:
+#  - awards
+#  - volunteer
+ - languages
+ - skills
+ - interests
+no_language_icons: false
+no_skill_icons: false
+buttons:
+  print: false
+  pdf: /assets/resume.pdf
+  json: /assets/resume.json
 ---
